Pull 流程基本上过了一遍，从重平衡（consumer 和 queue 的动态平衡） -> consumer 与 queue 的分配 -> 拉取任务 -> consume blocking queue -> consumer 业务消费。